[package]
name = "gpu-waiter"
version = "0.2.0"
edition = "2021"
authors = ["Malachi Xu <w568w@outlook.com>"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = "line-tables-only"

[dependencies]
nvml-wrapper = "0"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
once_cell = "1"
ctrlc = "3"
indicatif = "0.17"
env_logger = "0.11"
indicatif-log-bridge = "0"
log = "0"
chrono = "0.4"
cudarc = "0"
crossbeam-channel = "0"
parking_lot = "0"
mimalloc = "0"
fs4 = "0"
itertools = "0.13"
either = "1"